## Copyright 2009-2024 Intel Corporation
## SPDX-License-Identifier: Apache-2.0

ADD_LIBRARY(lexers STATIC
 stringstream.cpp
 tokenstream.cpp
)
TARGET_LINK_LIBRARIES(lexers sys math)
SET_PROPERTY(TARGET lexers PROPERTY FOLDER common)
SET_PROPERTY(TARGET lexers APPEND PROPERTY COMPILE_FLAGS " ${FLAGS_LOWEST}")

IF (EMBREE_STATIC_LIB)
  INSTALL(TARGETS lexers 
      EXPORT lexers-targets 
      ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT devel
      FRAMEWORK DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT runtime OPTIONAL)
  INSTALL(EXPORT lexers-targets DESTINATION "${EMBREE_CMAKEEXPORT_DIR}" COMPONENT devel)
ENDIF()

IF (EMBREE_BUILD_APPLE_FRAMEWORKS)
  set_target_properties(lexers PROPERTIES
  FRAMEWORK TRUE
  FRAMEWORK_VERSION ${EMBREE_VERSION_MAJOR}.${EMBREE_VERSION_MINOR}
  XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER com.intel.embree.lexers
  MACOSX_FRAMEWORK_IDENTIFIER com.intel.embree.lexers
  MACOSX_FRAMEWORK_BUNDLE_VERSION ${EMBREE_VERSION_MAJOR}.${EMBREE_VERSION_MINOR}
  MACOSX_FRAMEWORK_SHORT_VERSION_STRING ${EMBREE_VERSION_MAJOR})
ENDIF()
