## Copyright 2009-2024 Intel Corporation
## SPDX-License-Identifier: Apache-2.0

ADD_LIBRARY(simd STATIC sse.cpp)
SET_PROPERTY(TARGET simd PROPERTY FOLDER common)
SET_PROPERTY(TARGET simd APPEND PROPERTY COMPILE_FLAGS " ${FLAGS_LOWEST}")

IF (EMBREE_STATIC_LIB)
  INSTALL(TARGETS simd 
      EXPORT simd-targets ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT devel
      FRAMEWORK DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT runtime OPTIONAL)
  INSTALL(EXPORT simd-targets DESTINATION "${EMBREE_CMAKEEXPORT_DIR}" COMPONENT devel)
ENDIF()

IF (EMBREE_BUILD_APPLE_FRAMEWORKS)
  set_target_properties(simd PROPERTIES
  FRAMEWORK TRUE
  FRAMEWORK_VERSION ${EMBREE_VERSION_MAJOR}.${EMBREE_VERSION_MINOR}
  XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER com.intel.embree.simd
  MACOSX_FRAMEWORK_IDENTIFIER com.intel.embree.simd
  MACOSX_FRAMEWORK_BUNDLE_VERSION ${EMBREE_VERSION_MAJOR}.${EMBREE_VERSION_MINOR}
  MACOSX_FRAMEWORK_SHORT_VERSION_STRING ${EMBREE_VERSION_MAJOR})
ENDIF()