## Copyright 2009-2021 Intel Corporation
## SPDX-License-Identifier: Apache-2.0

IF(NOT TASKING_HPX)
  SET(CMAKE_THREAD_PREFER_PTHREAD TRUE)
  FIND_PACKAGE(Threads REQUIRED)
endif()

ADD_LIBRARY(sys STATIC
  sysinfo.cpp
  alloc.cpp
  filename.cpp
  library.cpp
  thread.cpp
  estring.cpp
  regression.cpp
  mutex.cpp
  condition.cpp
  barrier.cpp
)

SET_PROPERTY(TARGET sys PROPERTY FOLDER common)
SET_PROPERTY(TARGET sys APPEND PROPERTY COMPILE_FLAGS " ${FLAGS_LOWEST}")

IF(TASKING_HPX)
  IF(HPX_FOUND)
    TARGET_INCLUDE_DIRECTORIES(sys PUBLIC "${HPX_INCLUDE_DIRS}")
    TARGET_LINK_LIBRARIES(sys PUBLIC ${CMAKE_DL_LIBS} HPX::hpx)
  ELSE()
    find_package(HPX REQUIRED)
    IF(HPX_FOUND)
      TARGET_INCLUDE_DIRECTORIES(sys PUBLIC "${HPX_INCLUDE_DIRS}")
      IF (EMBREE_SYCL_SUPPORT)
        TARGET_LINK_LIBRARIES(sys PUBLIC {CMAKE_DL_LIBS} ${SYCL_LIB_NAME} HPX::hpx)
      ELSE()
        TARGET_LINK_LIBRARIES(sys PUBLIC ${CMAKE_DL_LIBS} HPX::hpx)
      ENDIF()
    ELSE()
      message("-- Not found HPX")
    ENDIF()
  ENDIF()
ELSE()
  TARGET_LINK_LIBRARIES(sys ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
  IF (EMBREE_SYCL_SUPPORT)
    TARGET_LINK_LIBRARIES(sys ${SYCL_LIB_NAME})
  ENDIF()
ENDIF()

IF (EMBREE_STATIC_LIB)
  INSTALL(TARGETS sys EXPORT sys-targets ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT devel)
  INSTALL(EXPORT sys-targets DESTINATION "${EMBREE_CMAKEEXPORT_DIR}" COMPONENT devel)
ENDIF()

